# ClawMark

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
configs/: openclaw.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: credentials-setup.md
scripts/: google_auth.py
skills/calendar/: SKILL.md
skills/email/: SKILL.md
skills/google_sheets/: SKILL.md
skills/notion/: SKILL.md
src/clawmark/: __init__.py  context.py  main.py  models.py  orchestrator.py  task_loader.py
src/clawmark/sandbox/: __init__.py  base.py  docker.py  dry_run.py
src/clawmark/state/: __init__.py  base.py  composite.py  progress.py
tasks/clinical_assistant/task1/: task.py  task_summary.txt
tasks/clinical_assistant/task2/: task.py  task_summary.txt
tasks/clinical_assistant/task3/: task.py  task_summary.txt
tasks/clinical_assistant/task4/: task.py  task_summary.txt
tasks/content_operation/task1/: task.py  task_summary.txt
tasks/content_operation/task10/: task.py  task_summary.txt
tasks/content_operation/task11/: task.py  task_summary.txt
tasks/content_operation/task12/: task.py  task_summary.txt
tasks/content_operation/task2/: task.py  task_summary.txt
tasks/content_operation/task3/: task.py  task_summary.txt
tasks/content_operation/task4/: task.py  task_summary.txt
tasks/content_operation/task5/: task.py  task_summary.txt
tasks/content_operation/task6/: task.py  task_summary.txt
tasks/eda/task1/: task.py  (+1 more)
tests/: test_calendar_lifecycle.py  test_email_lifecycle.py  test_google_sheets_full.py  test_notion_lifecycle.py
(+923 files in other folders)
